--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -186,12 +186,15 @@ Release 0.2.3 is on TestFlight:
   (1) Fixed a bug that was introduced in the last session that prevented from loading the Feed.
   (2) Fixed a comment navigation issue with color sectors.
 
-- Beeper iOS 0.4.2 Internal Release Note
+- Beeper iOS 0.4.3 Internal Release Note
   (1) Added scrolling up the comment box to avoid obstruction with keyboard.
   (2) Added auto-scroll to the correct comment box from the feed comment touch.
+  (3) Added KPI monthly target screen
+  (4) Added comment box and auto-scroll to the correct comment box in the Monthly Target screen.
+  (5) Several bug fixes associated with app crashes.
+  Bugs:
+  - Site comment box scrolling can get out of sync when too many comment boxes opened and many scroll-ups. Work around is to go back to network and back to site page.
   TODO:
-  - KPI monthly target screen
-  - Need to add comment box and auto-scroll to the correct comment box in the Monthly Target screen.
   - Need to add Mixpanel events for the comment box and feed as well.  Not sure how details that would be.
 
 - TODO:
