--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -238,7 +238,7 @@ Release 0.2.3 is on TestFlight:
 
 - Beeper iOS 0.5.0 - Internal Release Note
   - TODO:
-  - OTA update via https://github.com/aerofs/react-native-auto-updater
+  - OTA update implementation via https://github.com/aerofs/react-native-auto-updater
   - (Replacing current listview?) Checkout react-native-tableview for IOS tableview support: https://github.com/aksonov/react-native-tableview
 
 - TODO:
