--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -277,12 +277,21 @@ Release 0.2.3 is on TestFlight:
     - Changed the comment channel name "#network_name" to "#daily_average" or "#monthly_target"
     - Mixpanel stats for comments on Monthly Target screen
 
-- Beeper iOS 0.6.3 - Internal Release Note
+- Beeper iOS 0.6.3 - Internal OTA Release Note
   - Story 892: Network/Site/Sector BH charts
   - Story 894: Showing Network/Site/Sector BH time frame
 
+- Beeper iOS 0.6.4 - Internal OTA Release Note
+  - Revised the Site/Sector BH screens to show title and KPI BH average text to "Network Busy Hour" to clarify
+    that this is the network busy hour in site and sector BH screens.
+
+- Beeper iOS 0.7.0 - Internal non-OTA Release Note
+  - Story 897:
+    - Place highlight on network busy hour via SparklineView's new verticalLineArray props
+    - Implemented the new verticalLineArray props in the iOS Core-Plot SparlineViewController.
+
   TODO:
-  - Swapped out
+  - Update the react-native-router-flux to the new version.
 
   - TODO:
   - Story 638: Color code sector details map. https://3ten8.tpondemand.com/entity/638
